# mclang

./: .gitignore  9cc.c  Block.h  CMakeLists.txt  Front.md  Function.cpp  Function.h  IR.cpp  IRBuilder.cpp  IRBuilder.h  IRGen.cpp  Makefile  README.md  SymbolTable.cpp  Variable.h  actual  autotest.py  build.py  chibicc.h  clean.sh  codegen.c  codegen.cpp  compile_commands.json  core.chibicc.55816  core.chibicc.56109  core.chibicc.59929  core.chibicc.59959  core.chibicc.60202  log  main.c  main.cpp  mclang.h  parse.c  parse.cpp  run-clang-tidy.py  run.sh  std.ll  std_mem2ref.ll  strings.c  strings.cpp  (+9 more)
.cache/clangd/index/: Block.cpp.483B98A47F41E6C1.idx  Block.h.589B39B59E8B9F6D.idx  FunctionIR.cpp.D89EB6C59BFB1B5B.idx  FunctionIR.h.EE33130E6E72AB1A.idx  IR.cpp.F93A26284F971798.idx  IRBuilder.cpp.5FC8D6F054E40C0D.idx  IRBuilder.h.17035D78951D0F13.idx  IRGen.cpp.636E6FE71FEB8742.idx  Instruction.cpp.81A3F9D4C318E932.idx  Instruction.h.C7A1D8B54EC41731.idx  SymbolTable.cpp.0BF1C959E3F2790C.idx  SymbolTable.h.CC649A87F8D364CC.idx  Variable.cpp.CC6A938B210843EA.idx  Variable.h.7F1BA90AD6E43DA5.idx  codegen.cpp.DA89CD8DAA0704D6.idx  main.cpp.AA5E251DDAD68340.idx  mclang.h.EC090DACD7B79EBF.idx  parse.cpp.9445EC7E0B2E1BF6.idx  strings.cpp.E664FE63FDEFF92C.idx  tokenize.cpp.EE4798C8A7300A6D.idx  type.cpp.B909D935968E92DD.idx
include/: BasicBlock.h  Block.h  DominTree.h  FunctionIR.h  IRBuilder.h  Instruction.h  LoopInfo.h  Module.h  Pass.h  Rope.h  SetCompute.h  StructTypeTag.h  SymbolTable.h  Type.h  Use.h  User.h  Variable.h  mclang.h
include/analysis/: Dominance.h  DominatorTree.h  LoopInfo.h
include/backend/: InstSelect.h  PipeHole.h
include/front/: Type.h  mclang.h
include/ir/: BasicBlock.h  FunctionIR.h  IRBuilder.h  Instruction.h  Module.h  StructTypeTag.h  SymbolTable.h  User.h  Value.h
include/mir/: MachineIR.h
include/transform/: DCE.h  Mem2reg.h
include/utils/: Rope.h
ir/: test.c
lib/: BasicBlock.cpp  Block.cpp  DominTree.cpp  FunctionIR.cpp  IR.cpp  IRBuilder.cpp  IRGen.cpp  IRGenAddr.cpp  IRGenExpression.cpp  IRGenStatement.cpp  IRGenVariable.cpp  Instruction.cpp  Module.cpp  Rope.cpp  StructTypeTag.cpp  SymbolTable.cpp  Variable.cpp  codegen.cpp  main.cpp  parse.cpp  strings.cpp  tokenize.cpp  type.cpp
lib/analysis/: Dominance.cpp  DominatorTree.cpp
lib/backend/: InstSelect.cpp
lib/driver/: codegen.cpp  main.cpp
lib/front/: parse.cpp  strings.cpp  tokenize.cpp  type.cpp
lib/ir/: BasicBlock.cpp  FunctionIR.cpp  IRBuilder.cpp  IRGen.cpp  IRGenAddr.cpp  IRGenExpression.cpp  IRGenStatement.cpp  Instruction.cpp  Module.cpp  StructTypeTag.cpp  SymbolTable.cpp  Value.cpp
lib/transform/: DCE.cpp  Mem2reg.cpp  SCCP.cpp
lib/utils/: Rope.cpp
std/: arith.ll.bak  arith_1.c  array_3.c  call.c  call.ll.bak  call_test.c  for.c  if.c  if.ll  if.ll.bak  loop.c  loop.ll  loop.ll.bak  output.c  output.ll.bak  scope.ll.bak  struct.c  struct.ll.bak  test1.c
test/: control.c  control.s  decl.c  driver.sh  function.c  struct.c  struct.s  union.s  variable.c
test/sccp/: if.c
test/std/: arith.c  arith.ll.bak  array.c  array_2.c  call.ll.bak  call_test.c  func_3.c  global.c  global.ll.bak  global_2.c  if.c  if_2.c  loop.ll.bak  output.ll.bak  scope.c  scope.ll.bak  struct.c
